<resources>
    <string name="app_name">EChatGPT</string>
    <string name="send_Input_Chat_Message">Send input chat message</string>
    <string name="enter_message">Enter message here</string>
    <string name="enter_token">Enter your token here</string>
    <string name="set">SET</string>
    <string name="error">error</string>
    <string name="net_work_timeout">Network timeout</string>
    <string name="open_chat">Open chat</string>
    <string name="open_setting">Open setting</string>
    <string name="save">SAVE</string>
    <string name="conversation">CONVERSATION</string>
    <string name="describe_behavior">DESCRIBE\nBEHAVIOR</string>
    <string name="describe_model_behavior">Describe model behavior</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="go_back">Go back</string>
    <string name="enter_name">Enter name here</string>
    <string name="name_conflict">Name conflict</string>
    <string name="save_failed">Save failed</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="retry">Retry</string>
    <string name="etc">…</string>
    <string name="total_token_count">Total tokens : %s</string>
    <string name="prompt_token_count">Prompt token : %s</string>
    <string name="completion_token_count">Completion token : %s</string>
    <string name="completion">Completion</string>
    <string name="history">History</string>
    <string name="exit_option_mode">Exit option mode</string>
    <string name="delete_history">Delete history</string>
    <string name="continue_chat">Continue chat</string>
    <string name="no_need">No need</string>
    <string name="go_save">Go save</string>
    <string name="new_chat_guide">Save chat before starting a new one?</string>
    <string name="continue_chat_guide">Combine chat?</string>
    <string name="combine">Combine</string>
    <string name="chat">Chat</string>
    <string name="image">Image</string>
    <string name="back_to_chat">Back to chat</string>
    <string name="back_to_image">Back to image</string>
    <string name="empty_notify">Can\'t be empty</string>
    <string name="no_content">No content</string>
    <string name="audio">audio</string>
    <string name="details">details</string>
    <string name="completions">completions</string>
    <string name="edits">edits</string>
    <string name="files">files</string>
    <string name="fineTunes">fineTunes</string>
    <string name="models">models</string>
    <string name="moderations">moderations</string>
    <string name="embeddings">embeddings</string>
    <string name="configs">configs</string>
    <string name="authorize_key_title">Authorize key</string>
    <string name="copy">copy</string>
    <string name="notification_config_title">Notification shortcut entry</string>
    <string name="add_shortcut">add shortcut</string>
    <string name="edit">EDIT</string>
    <string name="remove_shortcut">REMOVE</string>
    <string name="switch_shortcut">CHANGE</string>
    <string name="settings_title">Settings</string>
    <string name="notification_shortcut">Notification shortcut</string>
</resources>