<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:letterSpacing="0.1"
            android:padding="@dimen/content_padding"
            android:text="@string/delete"
            android:textSize="@dimen/content_text_size"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/option_content_padding"
            android:text="@string/confirm"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/option_content_padding"
            android:text="@string/cancel"
            app:layout_constraintTop_toBottomOf="@id/confirm" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>