<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:letterSpacing="0.06"
            android:padding="@dimen/content_padding"
            android:text="@string/new_chat_guide"
            android:textColor="@color/text_color"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@id/go_save"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/go_save"
            android:layout_width="match_parent"
            android:layout_height="@dimen/option_item_height"
            android:background="@color/main_color"
            android:text="@string/go_save"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:backgroundTint="@color/main_color"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toTopOf="@id/no_need" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/no_need"
            android:layout_width="match_parent"
            android:layout_height="@dimen/option_item_height"
            android:background="@color/red_smooth"
            android:text="@string/no_need"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:backgroundTint="@color/red_smooth"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>