<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/content_white"
        android:fitsSystemWindows="true"
        tools:context=".activity.ChatActivity">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chat_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/chat_input_box"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.helper.widget.Layer
            android:id="@+id/chat_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/main_color"
            app:constraint_referenced_ids="chat_input_box,send,chat_save,conversation,send,open_setting" />

        <EditText
            android:id="@+id/chat_input_box"
            android:layout_width="0dp"
            android:layout_height="@dimen/input_box_height"
            android:background="@color/white"
            android:elevation="@dimen/content_elevation"
            android:hint="@string/enter_message"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="@dimen/content_padding"
            android:textColor="@color/text_color"
            android:textSize="@dimen/content_text_size"
            app:layout_constraintBottom_toTopOf="@id/chat_system"
            app:layout_constraintEnd_toStartOf="@id/send"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/send"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/send_Input_Chat_Message"
            android:elevation="@dimen/content_elevation"
            android:padding="@dimen/content_padding"
            android:src="@drawable/send_msg"
            app:layout_constraintBottom_toBottomOf="@id/chat_input_box"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/chat_input_box" />

        <ProgressBar
            android:id="@+id/chat_state"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/main_color"
            android:elevation="@dimen/content_elevation"
            android:indeterminateTint="@color/white"
            android:padding="@dimen/content_padding"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/send"
            app:layout_constraintEnd_toEndOf="@id/send"
            app:layout_constraintStart_toStartOf="@id/send"
            app:layout_constraintTop_toTopOf="@id/send" />

        <TextView
            android:id="@+id/chat_save"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/main_color_background_ripple"
            android:elevation="@dimen/option_elevation"
            android:gravity="center"
            android:padding="@dimen/option_content_padding"
            android:text="@string/save"
            android:textColor="@color/text_color_light"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/chat_system"
            app:layout_constraintEnd_toStartOf="@id/chat_system"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/chat_system" />

        <TextView
            android:id="@+id/chat_system"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/main_color_background_ripple"
            android:elevation="@dimen/option_elevation"
            android:gravity="center"
            android:padding="@dimen/option_content_padding"
            android:text="@string/describe_behavior"
            android:textColor="@color/text_color_light"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/open_setting"
            app:layout_constraintEnd_toStartOf="@id/conversation"
            app:layout_constraintStart_toEndOf="@id/chat_save" />

        <TextView
            android:id="@+id/conversation"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/main_color_background_ripple"
            android:elevation="@dimen/option_elevation"
            android:gravity="center"
            android:padding="@dimen/option_content_padding"
            android:text="@string/conversation"
            android:textColor="@color/text_color_light"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/chat_system"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/chat_system"
            app:layout_constraintTop_toTopOf="@id/chat_system" />

        <ImageView
            android:id="@+id/open_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white_transparent"
            android:contentDescription="@string/open_setting"
            android:padding="4dp"
            android:src="@drawable/arrow_up"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>